# GoGrid

./: .gitignore  ALL_BUGS_FIXED.md  AUTHENTICATION.md  AUTO_UPDATE.md  BUGS_FIXED.md  BUILD.md  BUILDING.md  CLIENT_DEPLOYMENT_PLAN.md  CRITICAL_BUGS_REPORT.md  Cargo.toml  Dockerfile.cuda-builder  FINAL_AUDIT.md  HETEROGENEOUS_PIPELINE_PROGRESS.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INSTALLER_BUILD.md  LICENSE  METAL_OPTIMIZATIONS.md  PLATFORMS.md  README.md  SERVER_DEPLOYED.md  SERVER_SETUP.md  SETUP_COMPLETE.md  build_all_platforms.sh  corpgrid.db  create_api_key.py  deploy_updates.sh  deploy_updates_with_config.sh  load_model.py  patch_binary_config.sh  setup_server.sh  test_inference.py  test_model.py
.github/: RELEASE.md
.github/workflows/: build-release.yml  build-test.yml
crates/agent/: Cargo.toml
crates/agent/src/: client.rs  device_info.rs  executor.rs  gpu_cuda.rs  gpu_metal.rs  gpu_windows.rs  lib.rs  main.rs  sandbox.rs
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  job.rs  lib.rs  power.rs  power_macos.rs  reputation.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: main.rs  worker_registry.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: scheduler.proto
crates/proto/python/: scheduler_pb2.py  scheduler_pb2_grpc.py
crates/proto/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: cuda_executor.rs  llm_inference_cuda.rs  llm_inference_metal.rs  llm_loader.rs  main.rs  metal_executor.rs
crates/scheduler/: ADAPTIVE_THROTTLING.md  CODE_AUDIT_REPORT.md  Cargo.toml  FIXES_APPLIED.md  FLASH_ATTENTION.md  HETEROGENEOUS_PIPELINE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md  PROJECT_STATUS.md  QUANTIZATION.md  README_PRODUCTION.md  WORK_SUMMARY.md
crates/scheduler/examples/: benchmark_metal_optimizations.rs  benchmark_quantization.rs  compare_pipeline_configurations.rs  profile_pipeline.rs  stress_test_memory.rs  test_batch_inference.rs  test_pipeline.rs  test_quantized_inference.rs  test_resource_limiting.rs  test_streaming_inference.rs
crates/scheduler/migrations/: 001_init.sql  002_users.sql  003_metrics.sql
crates/scheduler/src/: api_auth.rs  db.rs  heartbeat.rs  heterogeneous_pipeline.rs  inference_backend.rs  lib.rs  main.rs  metrics.rs  metrics_tracking.rs  mistralrs_backend.rs  model_compatibility.rs  model_hosting.rs  model_hosting_service.rs  multimodal_inference.rs  openai_api.rs  placement.rs  quantization.rs  resource_manager.rs  sandbox.rs  service.rs  storage.rs  system_monitor.rs  tuf_service.rs  user_management.rs  web_ui.rs
crates/tray-app/: README.md
crates/tray-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/tray-app/src-tauri/icons/: icon.icns
crates/tray-app/src-tauri/src/: config.rs  coordinator_client.rs  lib.rs  main.rs  worker_process.rs
examples/: docker-compose.yml  job.yaml  llm_job.yaml  openai_api_usage.md
models/TinyLlama-1.1B-Chat-v1.0/: metadata.json
