[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/scheduler",
    "crates/agent",
    "crates/runner",
    "crates/proto",
    "crates/coordinator",
    "crates/tray-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CorpGrid Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# Networking
quinn = "0.11"
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }
rustls-pemfile = "2.1"

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "any", "migrate", "chrono", "uuid"] }

# Object storage
aws-sdk-s3 = "1.54"
aws-config = "1.5"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
blake3 = "1.5"
age = "0.10"
rustls-native-certs = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Metrics and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
prometheus-client = "0.22"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
bytes = "1.8"
tar = "0.4"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Fast CI builds - parallel compilation
[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
