[package]
name = "corpgrid-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
blake3 = { workspace = true }
age = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Tracing
tracing = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
io-kit-sys = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process"] }

[dev-dependencies]
hex = "0.4"
