[package]
name = "corpgrid-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "corpgrid-runner"
path = "src/main.rs"

[dependencies]
corpgrid-common = { path = "../common" }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.12", features = ["driver", "cublas", "nvrtc"] }
safetensors = "0.4"
hf-hub = "0.3"
tokenizers = "0.20"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"
safetensors = "0.4"
hf-hub = "0.3"
tokenizers = "0.20"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
