[package]
name = "gogrid-tray"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[lib]
name = "gogrid_tray_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "gogrid-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = "0.23"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3"
hostname = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.0"
